2002-06-01 15:53  probert

	* GNUmakefile, PCAppProj.pcproj, PCAppProject.m: Fixed a bug in the
	app makefile creation

2002-04-26 05:12  fedor

	* ChangeLog, PCAppProject.m: removed bunches of duplicate calls,
	retains and releases.

2002-03-25 20:37  probert

	* ChangeLog: ChangeLog updates

2002-03-01 14:30  probert

	* PCAppProject.m: Removed old include statements.

2002-03-01 14:28  probert

	* GNUmakefile, PCAppMakefileFactory.h, PCAppMakefileFactory.m,
	PCAppProj.pcproj, PCAppProject.m: The project now uses the makefile
	factory to create makefiles.

2002-01-07 16:37  probert

	* PC.proj: Somehow $(GNUSTEP_LOCAL_ROOT) is enough for the install
	path to be correct.

2002-01-07 16:05  probert

	* ChangeLog: Updated all ChangeLog files (using cvs2cl.pl)

2002-01-07 16:01  probert

	* GNUmakefile, PCAppProj.pcproj: Added libProjectCenter to the
	bundle's library link settings.

2002-01-07 10:37  probert

	* PC.project, PCAppProj.m, PCAppProj.pcproj: ProjectCenter now
	stores the project files under PROJECTNAME.pcproj to avoid name
	clashes.

2002-01-02 18:51  probert

	* PC.proj, PC.project: Changed the build tool entry to
	/usr/bin/make in all project files and templates.

2002-01-02 17:05  probert

	* GNUmakefile, PC.proj, PC.project, PCAppMakefileFactory.m,
	PCAppProject.m: The inspector now handles the installation path and
	other settings. Furthermore it does not save changes automatically
	but marks the project as being edited.	Upon 'save' the project
	file and GNUmakefile are being saved, not before! In addition the
	various PC* bundles are now maintained by ProjectCenter itself. 
	The installation path for ProjectCenter.app is corrected to the
	SYSTEM ROOT as well.

2002-01-02 13:13  probert

	* AppController.h, AppController.m, GNUmakefile, PC.proj: All
	bundles and libProjectCenter are now installed under
	GNUSTEP_SYSTEM_ROOT.  Also the PC.proj templates have now a correct
	install path default value.

2002-01-01 18:27  probert
