@@ -7,8 +7,11 @@
  *
  * $Id$
  */
+ 
+#ifndef _PCAPPPROJ_APPCONTROLLER_H
+#define _PCAPPPROJ_APPCONTROLLER_H
 
-#import <AppKit/AppKit.h>
+#include <AppKit/AppKit.h>
 
 @interface AppController : NSObject
 {
@@ -32,3 +35,5 @@
 - (void)showInfoPanel:(id)sender;
 
 @end
+
+#endif
